# openad-service-prop

./: .pre-commit-config.yaml  Dockerfile  README.md  Readme.md  openad.cfg  openad.config  pyproject.toml
helpers/: sample_request.py  test_serve.py
openad_model_property_service/: call_property_services.py  generate_property_service_defs.py  properties__init__.py  property_core_old.py  service.py
openad_model_property_service/definitions/services/: property_service_defintion_crystals_absolute_energy.json  property_service_defintion_crystals_band_gap.json  property_service_defintion_crystals_bulk_moduli.json  property_service_defintion_crystals_fermi_energy.json  property_service_defintion_crystals_formation_energy.json  property_service_defintion_crystals_metal_nonmetal_classifier.json  property_service_defintion_crystals_metal_semiconductor_classifier.json  property_service_defintion_crystals_poisson_ratio.json  property_service_defintion_crystals_shear_moduli.json  property_service_defintion_molecules_1.json  property_service_defintion_molecules_activity_against_target.json  property_service_defintion_molecules_askcos.json  property_service_defintion_molecules_clintox.json  property_service_defintion_molecules_docking.json  property_service_defintion_molecules_docking_tdc.json  property_service_defintion_molecules_molecule_one.json  property_service_defintion_molecules_molformer_classification.json  property_service_defintion_molecules_molformer_multitask_classification.json  property_service_defintion_molecules_molformer_regression.json  property_service_defintion_molecules_organtox.json  property_service_defintion_molecules_scscore.json  property_service_defintion_molecules_sider.json  property_service_defintion_molecules_similarity_seed.json  property_service_defintion_molecules_tox21.json  property_service_defintion_proteins_1.json  property_service_defintion_proteins_2.json  property_service_defintion_proteins_3.json
service-deploy-chart/: Chart.yaml  values.yaml
service-deploy-chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
(+1 files in other folders)
