[tool.poetry]
name = "openad_model_property_service"
version = "0.1.0"
license="MIT"
description = "Openad_model_Service  properties core service"
authors = ["Daniel Choi <choi@ibm.com>", "Phil Downey <Phil.Downey1@ibm.com>", "Brian Duenas <Brian.Duenas@ibm.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
scipy = "^1.12.0"
fastapi = "0.108.0"
uvicorn = "0.28.1"
Molgx = "0.22.0a1"

keybert ="0.8.4"
gt4sd-trainer-hf-pl = "1.0.0"


# if running default gt4sd_guacamol Services
# package already imports common services
# gt4sd_common = { git = "https://github.com/acceleratedscience/Open-AD-Model-Service", subdirectory = "openad-model-inference/gt4sd_common" }
gt4sd-inference-guacamol = { git = "https://github.com/acceleratedscience/Open-AD-Model-Service", subdirectory = "openad-model-inference/gt4sd_guacamol", branch = "main" }


#automatically loads through dependancies
toxsmi = {git = "https://github.com/PhillipDowney/chemical_representation_learning_for_toxicity_prediction", rev="0.0.3" , optional = false}
pytoda = { git = "https://github.com/PhillipDowney/paccmann_datasets" ,rev = "1.1.3",optional = false }

# if running paccman related Services
paccmann_chemistry = {git =  "https://github.com/PhillipDowney/paccmann_chemistry", rev = "0.0.4" , optional = false}

paccmann_generator = {git =  "https://github.com/PhillipDowney/paccmann_generator",rev = "0.0.2", optional = false}

paccmann_predictor = {git = "https://github.com/PhillipDowney/paccmann_predictor", rev = "0.0.2" ,optional = false}

paccmann_omics = {git =  "https://github.com/PaccMann/paccmann_omics" , optional = false}

paccmann_gp = {git = "https://github.com/PaccMann/paccmann_gp" , optional = false}

reinvent-chemistry = "0.0.51"
python = ">=3.9,<3.11"
pytest = "8.0.2"
tape-proteins = ">=0.5"
[tool.poetry.extras]


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.352"
python-lsp-server = {extras = ["all"], version = "^1.10.0"}
pandas = "2.2.1"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"